# cpp-atom

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  cpp-atom  main.cpp
include/: Particle.h  Shader.h  Vector3.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert
src/: Particle.cpp  Shader.cpp  Vector3.cpp  glad.c  main.cpp
